# FinalCoursework

./: .env.sample  .flake8  .gitignore  README.md  pyproject.toml  pytest.ini
config/: settings.py  urls.py
habits/: admin.py  models.py  pagination.py  permissions.py  serializers.py  tests.py  urls.py  views.py
habits/migrations/: 0001_initial.py  0002_remove_habit_created_at_habit_created.py  0003_remove_habit_owner_habit_user_alter_habit_linked.py
tg/: admin.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
tg/management/commands/: setup.beat.py
users/: admin.py  models.py  serializers.py  tests.py
users/migrations/: 0001_initial.py
users/tests/: test_auth.py
